Mon Aug 22 16:29:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/csv.rb (CSV#shift): store partial quoted strings in an array
	  and join at last, to improve performance with very long quoted
	  lines.  [ruby-core:76987] [Bug #12691]

Mon Aug 22 14:35:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* man/irb.1: remove useless -width option.
	  [ruby-dev:49767] [Bug #12692]

Mon Aug 22 09:02:56 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (Init_ISeq): undefine allocator of InstructionSequence,
	  to get rid of segfaults at method call on uninitialized object.

Sat Aug 21 05:47:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* enum.c (enum_sort): prevent wasteful array duplication.

Sat Aug 20 11:20:32 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* rubystub.c: generalize win32/stub.c.

Fri Aug 19 11:39:06 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (primary): allow parenthesised statement as a method
	  argument.  [Feature #12686]

Fri Aug 19 09:12:45 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (vm_set_main_stack): TOPLEVEL_BINDING must be built.
	  http://www.viva64.com/en/b/0414/#ID0EQ1CI  [ruby-core:76973]

Fri Aug 19 01:00:53 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* proc.c (mnew_missing): Remove an unused argument.
	  After r51126 rid is not used.

Thu Aug 18 09:26:52 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* gems/bundled_gems: bump to test-unit-3.2.1

Thu Aug 18 02:36:26 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb: skip gems which failed to build extensions.
	  [ruby-dev:49764] [Bug #12683]

Wed Aug 17 23:35:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gems/bundled_gems (tk): bump up to 0.1.1.

Wed Aug 17 23:14:42 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: build gem extensions into separate directories

	* tool/rbinstall.rb: install pre-built gem extension files gem
	  extension directories.  [ruby-core:76931] [Bug #12681]
